--- a/TODO.org
+++ b/TODO.org
@@ -1,5 +1,7 @@
 * DONE Learn how to print a term
 * DONE Find out the type of a given constant
+* DONE Find out if some type matches another type
 * Print all the assumptions used by that constant
 * Require library from ML
+* Make list of all definitions that should be checked
 * Make a custom coq top level that only runs the plugin
