--- a/TODO.org
+++ b/TODO.org
@@ -6,6 +6,9 @@
 * Filter permitted assumptions from that list
 * Require Coq library from ML
 * Make a custom coq top level that only runs the plugin
+Not clear that it is possible to do this, since the environment in
+the Coq executable is pretty restrictive.
 * Make script robust wrt definitions inside modules
 * Exclude advanced exercises for standard students
 * Remove "-late" suffix from Canvas' names
+* (Maybe?) Link submissions against students' previous files.
