--- a/TODO.org
+++ b/TODO.org
@@ -3,12 +3,13 @@
 * DONE Find out if some type matches another type
 * DONE Find all the assumptions used by that constant
 * DONE Make list of all definitions that should be checked
-* Filter permitted assumptions from that list
+* DONE Filter permitted assumptions from that list
+* Give allowed assumptions with the exercise name
 * Require Coq library from ML
 * Make a custom coq top level that only runs the plugin
 Not clear that it is possible to do this, since the environment in
 the Coq executable is pretty restrictive.
-* Make script robust wrt definitions inside modules
+* DONE Make script robust wrt definitions inside modules
 * Exclude advanced exercises for standard students
-* Remove "-late" suffix from Canvas' names
+* DONE Remove "-late" suffix from Canvas' names
 * (Maybe?) Link submissions against students' previous files.
