--- a/TODO.org
+++ b/TODO.org
@@ -5,6 +5,7 @@
 * DONE Make list of all definitions that should be checked
 * DONE Filter permitted assumptions from that list
 * DONE Give allowed assumptions with the exercise name
+* Allow assumption exceptions to be given globally
 * Require Coq library from ML
 * Make a custom coq top level that only runs the plugin
 Not clear that it is possible to do this, since the environment in
